--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
      <body>
      <canvas id="canvas1"></canvas>
-     <img id = "title" src="images/title65.png"/>
+     <img id = "title" src="images/bgText.png"/>
           <h1 id="loading">LOADING...</h1>
           <div id="container"></div>
           <script src="data.js"></script>
